[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.4",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "langchain[ollama]>=1.2.12",
    "langgraph>=1.1.2",
    "rich>=14.3.3",
]
